# OlioHarjoituksetSyksy25

./: .gitignore
H2a/: CMakeLists.txt  Car.cpp  Car.h  H2a.cpp  H2a.h  Rectangle.cpp  Rectangle.h  Student.cpp  Student.h
H2b/: CMakeLists.txt  Car.cpp  Car.h
H3a/: CMakeLists.txt  Chef.cpp  Chef.h  H3a.cpp  ItalianChef.cpp  ItalianChef.h
H3b/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h
H4/: CMakeLists.txt  Car.cpp  Car.h  Engine.cpp  Engine.h  H4.cpp  H4.h  Wheel.cpp  Wheel.h
H5/: CMakeLists.txt  ClassA1.cpp  ClassA1.h  ClassA2.cpp  ClassA2.h  ClassB.cpp  ClassB.h  main.cpp  main.h
H6a/: .gitignore  CMakeLists.txt  H6a.pro  main.cpp  myclass.h
h1/: CMakeLists.txt  h1.cpp  h1.h
h2/: CMakeLists.txt  h2.cpp  h2.h
h2b/: CMakeLists.txt  Tuote.cpp  Tuote.h  kaikki_tehtavat.cpp  tehtava1.cpp  tehtava2.cpp  tehtava3.cpp  tehtava4.cpp
h3/: CMakeLists.txt  h3.cpp  h3.h
