# CMakeList.txt : CMake project for H5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.10)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("H5")

# Add source to this project's executable.
add_executable (H5 "main.cpp" "main.h" "ClassB.h" "ClassB.cpp" "ClassA1.h" "ClassA1.cpp" "ClassA2.h" "ClassA2.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET H5 PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
